# MyNotes

./: .gitignore  CLAUDE.md  LICENSE  PRIVACY.md  README.md  _types.py  annotator.py  audio_utils.py  backup_utils.py  build_portable.py  crypto_utils.py  database.py  dialogs.py  error_codes.py  gdrive_utils.py  gui.py  image_utils.py  main.py  pastebin_utils.py  platform_utils.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  updater.py  version.py
.github/workflows/: build.yml
dialogs/: __init__.py  attachments.py  audio.py  backup.py  category.py  history.py  password.py  pastebin.py  tags.py
docs/: privacy-policy.html
docs/plans/: 2026-02-07-dark-theme-restyling.md
gui/: __init__.py  backup_controller.py  constants.py  export_controller.py  formatting.py  layout.py  media_controller.py  menu.py  note_controller.py  note_window.py  pastebin_controller.py  update_controller.py  widgets.py
