[project]
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = [
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
]

[tool.ruff.lint.per-file-ignores]
"build_portable.py" = ["ANN"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "qdarktheme",
    "qdarktheme.*",
    "sounddevice",
    "sounddevice.*",
    "reportlab",
    "reportlab.*",
    "google.*",
    "google_auth_oauthlib.*",
    "googleapiclient.*",
    "numpy",
    "numpy.*",
    "PIL",
    "PIL.*",
    "certifi",
    "PyInstaller",
]
ignore_missing_imports = true
